<resources>
    <string name="app_name">RemotePen</string>

    <!--menu-->
    <string name="action_settings">Settings</string>
    <string name="action_input">input</string>
    <string name="action_history">history</string>
    <string name="action_bookmark">bookmark</string>

    <!--TextBaseActivity-->
    <string name="start_login_intent">com.example.hoho.remotepen.start_login</string>
       
    <!--InputActivityLayout-->
    <string name="send_button">Send</string>
    <string name="input_page_title">Send to Chrome:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--LoginActivityLayout-->
    <string name="clear">clr</string>
    <string name="btn0">0</string>
    <string name="btn9">9</string>
    <string name="btn8">8</string>
    <string name="btn7">7</string>
    <string name="btn6">6</string>
    <string name="btn5">5</string>
    <string name="btn4">4</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>

    <!--SetPasswordActivityLayout-->
    <string name="login_password_title">Password:</string>
    <string name="title_set_password">Please enter your new password with 4 numbers: </string>
    <string name="repeat_password_titlte">Repeat Password:</string>
    <string name="password_field_tilte">Password:</string>
    <string name="set_password_confirm_button">Confirm</string>
    <!--HistActivityLayout-->
    <string name="hist_dialog_title">Option</string>

    <string-array name="hist_dialog_array">
        <item>Send</item>
        <item>Add to Bookmark</item>
        <item>Cancel</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <!--BookmarkActivityLayout-->
    <string name="bookmark_dialog_title">Option</string>
    <string-array name="bookmark_dialog_array">
        <item>Send</item>
        <item>Remove from Bookmark</item>
        <item>Cancel</item>
    </string-array>
    <string name="delete_dialog_msg">Do you want to delete?</string>

    <!--SettingActivity-->
    <string name="change_password_btn">Change Password</string>
    <string name="clear_all_hist_btn">Clear All History</string>
    <string name="confirm_clear_all_hist_title">Are you sure to clear all History?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="switch_from_setting">switch_from_setting</string>

</resources>
