<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_input"
        android:icon="@drawable/ic_input"
        android:title="@string/action_input"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/action_history"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/action_bookmark"
        app:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
