<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_set_password"
        android:id="@+id/title_set_password"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="10sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_field_tilte"
                android:id="@+id/password_field_title"
                android:layout_weight="1"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:ems="10"
                android:id="@+id/password_field"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:maxLength="4"
                android:password="true"
                android:numeric="integer"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/repeat_password_titlte"
                android:id="@+id/repeat_password_title"
                android:layout_weight="1"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:textSize="28sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/password_repeat_field"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:maxLength="4"
                android:password="true"
                android:numeric="integer" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/set_password_error"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#E57373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_password_confirm_button"
                android:id="@+id/set_password_confirm_button"
                android:layout_weight="1"
                android:layout_marginRight="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/set_password_cancel_button"
                android:layout_weight="1"
                android:layout_marginRight="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />
        </TableRow>



    </TableLayout>

</LinearLayout>